# pynix.sh

./: README.md  pynix.sh  pyproject.toml
app/: command_parser.py  history.py  main.py  pipeline.py  redirection.py  types.py  utils.py
app/commands/: __init__.py  builtins.py  completer.py  external.py
app/core/: __init__.py  execution.py  external.py  pipeline.py  runner.py  substitution.py  utils.py
app/core/orchestration/: __init__.py  runner.py
app/core/python/: __init__.py  execution.py  namespace.py
app/core/shell/: __init__.py  execution.py  expansions.py  pipeline.py
app/parsing/: __init__.py  ast_transform.py  command_parser.py  expansions.py  pipeline.py  redirection.py  redirections.py  segments.py  tokenizer.py  utils.py
app/ui/: __init__.py  completer.py  prompt.py  shell_lexer.py
tests/: test_builtins.py  test_capture.py  test_control_flow.py  test_edge_cases.py  test_expansion_errors.py  test_interpolation.py  test_multiline.py  test_parsing.py  test_pipelines.py  test_python.py  test_redirection.py  test_substitution.py
