[project]
name = "pynix.sh"
version = "0.1.5"
description = "A Python-powered, cross-platform shell with seamless Python/shell integration"
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["prompt-toolkit", "pygments"]
authors = [
    {name = "Swanand Mathekar"}
]
keywords = ["shell", "python", "repl", "terminal"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Shells",
]

[project.scripts]
pynix = "app.main:main"

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"
